fix: fix canvas overflow issue

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -3,7 +3,7 @@ footer {
     display: flex;
     justify-content: space-between;
     background-color: rgba(255, 255, 255, .3);
-    box-shadow: 4px 0px 4px 4px rgba(0, 0, 0, .3);
+    box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, .3);
     margin-top: auto;
 }
 
