--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -67,6 +67,12 @@
     height: 48px;
 }
 
+canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width: 480px) {
 
     .home__intro {
